// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles going to the nextStep 1`] = `
Array [
  Array [
    Object {
      "type": "NEXT_STEP",
    },
  ],
]
`;

exports[`handles setting the kid's name 1`] = `
Array [
  Array [
    Object {
      "kidName": "Test",
      "type": "ENTER_KID_NAME",
    },
  ],
]
`;

exports[`renders the <SetName> component 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#FFF",
        "fontFamily": "Raleway-ExtraBold",
        "fontSize": 30,
        "marginBottom": -2,
        "textAlign": "center",
      }
    }
  >
    [missing "en.setName.header" translation]
  </Text>
  <View
    style={
      Object {
        "height": 32,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#FFF",
        "fontFamily": "Raleway-Regular",
        "fontSize": 16,
        "textAlign": "left",
      }
    }
  >
    [missing "en.setName.kidsName" translation]
  </Text>
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <TextInput
    autoCapitalize="words"
    autoCorrect={false}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholderTextColor="rgba(75, 73, 73, 0.8)"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
        "borderRadius": 4,
        "color": "rgba(75, 73, 73, 1)",
        "fontFamily": "Raleway-Regular",
        "height": 32,
        "paddingHorizontal": 8,
        "width": 686,
      }
    }
    underlineColorAndroid="rgba(255, 255, 255, 1)"
  />
  <View
    style={
      Object {
        "height": 24,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }
      >
        [missing "en.general.nextStep" translation]
         
      </Text>
    </View>
  </View>
</View>
`;
